--- a/style.css
+++ b/style.css
@@ -449,6 +449,7 @@ margin-top: 80px;
 /* ===== MY WORK =====*/
 .work__container{
   row-gap: 2rem;
+  display: flex;
 }
 .work__img{
   box-shadow: 0 4px 25px rgba(14,36,49,.15);
